// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-result-component when called in an existing project when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

    Happy coding!

    Further reading:
      https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
    
"
`;

exports[`@coveo/create-atomic-result-component when called in an existing project when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "kJH2XVWhWdnme3CtyxJ2Wx94p90=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "CSzlp6SzDDKYsFtDpjr8ZDAjDFk=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ewQGf3/bnIIj+Rv249cv7K7YGsg=",
                      "name": "stencil-docs.d.ts",
                    },
                  ],
                  "hash": "OzYoobNX1XCpcFrvvtsD00f4Rwg=",
                  "name": "docs",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "z2Tw0h9uCuOrJZY4XjGokesisTU=",
                  "name": "package.json",
                },
                HashedFile {
                  "hash": "A57JcjV7N2EnmKjBh38lL83Y0SE=",
                  "name": "readme.md",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "EpKK14CXyjrSNQsuEEKqSalxDxE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "pz4QgJpX4pdlknpwpTkhJ9DU0JE=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "9GZXk3SKeABfR9xa4E70Wn24K3M=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                  ],
                  "hash": "NZrkgj+CUUOFog9Djwh2e7MlPKo=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "VUPPStYRtDhau2kFjUISz5YvHSE=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "VgSIaKwwPO+xCv8JBcytXAXgB18=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "g1NlZcXnnygtwN7p62KfQwTrzSw=",
          "name": "components",
        },
        HashedFile {
          "hash": "hDda5gtN4YPLmASHFgAZanGhSmY=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "zJQKmqArKzOvjuA1F/O2Cg38reo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "WBXXl7Em83GskL/B10/zRrjjpII=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "r23wwW5wvO+H6ZGKVG5DjhD0mTo=",
              "name": "index.ts",
            },
          ],
          "hash": "tdtcK13ysg5WEMg91GUjcUhY+kw=",
          "name": "pages",
        },
      ],
      "hash": "82nU9XBG6o/EIeS9gndDlrpe5b0=",
      "name": "src",
    },
    HashedFile {
      "hash": "pmsUQcrl+uttNjhQm9SN6CoAvrg=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "Ok5/YuBYJZohEbc2+m6G13WoB/8=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

    Happy coding!

    Further reading:
      https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
    
"
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "kJH2XVWhWdnme3CtyxJ2Wx94p90=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "CSzlp6SzDDKYsFtDpjr8ZDAjDFk=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "LnMzbbLNrRsqQW1SHHxbYfpj0po=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "pz4QgJpX4pdlknpwpTkhJ9DU0JE=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "jw9afSrAJbZAoWRB1uOgaF4wWNI=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "e2Db6kstmpZwLRy4USqa5e9vFyA=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "VUPPStYRtDhau2kFjUISz5YvHSE=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "zWnNHLbljOV0NhKIltzU6R1AsCg=",
              "name": "valid-component-name",
            },
          ],
          "hash": "uyF2dSZhNDtMCZYLI6uBRdk7Gjw=",
          "name": "components",
        },
        HashedFile {
          "hash": "hDda5gtN4YPLmASHFgAZanGhSmY=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "zJQKmqArKzOvjuA1F/O2Cg38reo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "WBXXl7Em83GskL/B10/zRrjjpII=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "r23wwW5wvO+H6ZGKVG5DjhD0mTo=",
              "name": "index.ts",
            },
          ],
          "hash": "tdtcK13ysg5WEMg91GUjcUhY+kw=",
          "name": "pages",
        },
      ],
      "hash": "xR3FRweh6LHvungg4+47gd384nE=",
      "name": "src",
    },
    HashedFile {
      "hash": "pmsUQcrl+uttNjhQm9SN6CoAvrg=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "t+Y/nPEtdc23BjiuwpntiKMMHO8=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called without any args when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

    Happy coding!

    Further reading:
      https://docs.coveo.com/en/atomic/latest/cc-search/create-custom-components
    
"
`;

exports[`@coveo/create-atomic-result-component when called without any args when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "kJH2XVWhWdnme3CtyxJ2Wx94p90=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "CSzlp6SzDDKYsFtDpjr8ZDAjDFk=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "x29G57taj65VfZsWrt8iu+gb0e8=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "pz4QgJpX4pdlknpwpTkhJ9DU0JE=",
                      "name": "sample-result-component.css",
                    },
                    HashedFile {
                      "hash": "dPCJ+8jkbLdw6ubOsi+ZJttvEHg=",
                      "name": "sample-result-component.tsx",
                    },
                  ],
                  "hash": "gvu+Raia2M7xnRwTDiPD8hk9CQc=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "VUPPStYRtDhau2kFjUISz5YvHSE=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "ltPTasWFHK3TMyIOEhez0Q0xPxs=",
              "name": "sample-result-component",
            },
          ],
          "hash": "AzhoZRp6utVEgvQqDTML2XE1XBg=",
          "name": "components",
        },
        HashedFile {
          "hash": "hDda5gtN4YPLmASHFgAZanGhSmY=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "zJQKmqArKzOvjuA1F/O2Cg38reo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "WBXXl7Em83GskL/B10/zRrjjpII=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "r23wwW5wvO+H6ZGKVG5DjhD0mTo=",
              "name": "index.ts",
            },
          ],
          "hash": "tdtcK13ysg5WEMg91GUjcUhY+kw=",
          "name": "pages",
        },
      ],
      "hash": "m4Uj7529QzmKtFFrO3hF2loqnvE=",
      "name": "src",
    },
    HashedFile {
      "hash": "pmsUQcrl+uttNjhQm9SN6CoAvrg=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "t/QOxN7KS1NBexSRVje5xsn1qfk=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "OCB7nCZdqhOjiUudpilH793oXfE=",
  "name": "no-args",
}
`;
